<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/profile"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/ic_back"
        app:layout_constraintTop_toTopOf="@+id/ic_back" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile"
        android:contentDescription="@string/image_profile"
        tools:srcCompat="@drawable/kim" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/btn_edit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#AA228858"
        android:text="@string/notifikasi"
        android:textSize="12sp"
        app:icon="@drawable/ic_notifications"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <Button
        android:id="@+id/btn_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#AA228858"
        android:text="@string/pengaturan"
        android:textSize="12sp"
        app:icon="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="@+id/btn_edit"
        app:layout_constraintStart_toStartOf="@+id/btn_edit"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />
    <Button
        android:id="@+id/btn_notifikasi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#AA228858"
        android:text="@string/bantuan"
        android:textSize="12sp"
        app:icon="@drawable/ic_help"
        app:layout_constraintEnd_toEndOf="@+id/btn_settings"
        app:layout_constraintStart_toStartOf="@+id/btn_settings"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>